# endian-writer-derive

./: CONTRIBUTING.MD  Cargo.toml  README-DEV.MD  README.MD  README.md
.github/: artifact-groups.yml  changelog.hbs  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.yml
.github/workflows/: rust.yml
src/: AGENTS.md  Cargo.toml  lib.rs
src/endian-writer-derive/: Cargo.toml
src/endian-writer-derive/src/: lib.rs
src/endian-writer-derive/tests/macro/nested/: nested.expanded.rs
src/endian-writer-derive/tests/macro/simple/: simple.expanded.rs
src/endian-writer-derive/tests/macro/weird_order/: weird_order.expanded.rs
tests/: macro_tests.rs
tests/macro/nested/: nested.rs
tests/macro/simple/: simple.rs
tests/macro/weird_order/: weird_order.rs
