[package]
name = "endian-writer-derive"
version = "0.1.0"
edition = "2021"
description = "Procedural Macros for endian-writer crate."
repository = "https://github.com/Sewer56/endian-writer-derive"
license = "MIT"
include = ["src/**/*"]
readme = "../../README.MD"

[lib]
proc-macro = true

[features]
default = ["std"]
std = []

[dependencies]
syn = { version = "2.0.85", features = ["full", "extra-traits"] }
quote = "1.0.37"
proc-macro2 = "1.0.89"
memoffset = "0.9.1"
endian-writer = "2.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
macrotest = "1.0.13"